# gestor_educativo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/: AGENTS.md  copilot-instructions.md
.github/prompts/: backend-dev.prompt.md  database.prompt.md
.github/skills/document-generation/: SKILL.md
.github/skills/fastapi/: SKILL.md
alembic/: env.py
alembic/versions/: ab1015cf7528_initial.py
app/: __init__.py  config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: alumnos.py  auth.py  cursos.py  docentes.py  documentos.py  email.py  materias.py  notas.py  tutores.py
app/core/: logging.py  middleware.py  security.py
app/models/: __init__.py  alumno.py  audit.py  curso.py  docente.py  documento.py  materia.py  nota.py  periodo.py  plantilla.py  tutor.py  usuario.py
app/schemas/: alumno.py  auth.py  common.py  curso.py  docente.py  documento.py  materia.py  nota.py  tutor.py
app/services/: auth_service.py  certification_service.py  document_service.py  email_service.py
app/template_agent/: llm_mapper.py  ocr_processor.py  orchestrator.py  template_builder.py
app/utils/: encryption.py
docs/: api-reference.md  architecture.md  authentication.md  certification-system.md  cost-monitoring.md  database-schema.md  deployment.md  document-generation.md  gmail-integration.md  security.md  template-agent.md
scripts/: seed_data.py  start.sh  verify_seed.py
secrets/: .env.example
tests/: conftest.py  test_alumnos.py  test_auth.py  test_crud.py  test_cursos.py  test_docentes.py  test_documentos.py  test_materias.py  test_notas.py  test_svc.py  test_tutores.py  test_utils.py
(+1 files in other folders)
